# Flint

./: .gitattributes  .gitignore  .gitmodules  BuildScript.py  CMakeLists.txt  GenerateProjects.bat  Makefile  QuickBuild.bat  README.md  premake5.lua
Engine/Core/: Backend.hpp  Buffer.hpp  CMakeLists.txt  CommandBuffers.hpp  Commands.hpp  ComputePipeline.hpp  Device.hpp  DeviceBoundObject.hpp  DrawEntry.hpp  Engine.hpp  EngineBoundObject.hpp  Entity.hpp  EventSummary.hpp  FObject.hpp  Geometry.hpp  GeometryStore.hpp  GhostEntity.hpp  Graphical.hpp  Instance.hpp  Materials.hpp  MeshBindingTable.hpp  MeshRasterizer.hpp  Pipeline.hpp  PipelineCacheHandler.hpp  PipelineManager.hpp  Program.hpp  Rasterizer.hpp  RasterizingPipeline.hpp  RasterizingProgram.hpp  RayTracer.hpp  RayTracingPipeline.hpp  RenderTarget.hpp  RenderTargetAttachment.hpp  ShaderCode.hpp  StaticEntity.hpp  StaticInitializer.hpp  StaticModel.hpp  Texture.hpp  Texture2D.hpp  TextureSampler.hpp  (+4 more)
Engine/Core/Camera/: Camera.hpp  MonoCamera.hpp
Engine/Core/Containers/: BinaryMap.hpp  Bitset.hpp  Bytes.hpp  FlatSet.hpp  Reactor.hpp  SparseArray.hpp  SpinMutex.hpp  Synchronized.hpp  WorkerGroup.hpp
Engine/Core/Entities/: Entity.hpp  StaticEntity.hpp
Engine/Core/Errors/: AssetError.hpp  BackendError.hpp  InvalidArgumentError.hpp
Engine/Core/EventSystem/: EventSystem.hpp  Keyboard.hpp  Mouse.hpp
Engine/Core/Loader/: GeometryLoader.hpp
Engine/Core/Shaders/: FragmentShader.hpp  Shader.hpp  VertexShader.hpp
Engine/Core/Source/: Buffer.cpp  CommandBuffers.cpp  Device.cpp  DeviceBoundObject.cpp  DrawEntry.cpp  Geometry.cpp  Graphical.cpp  MeshBindingTable.cpp  PipelineCacheHandler.cpp  RasterizingPipeline.cpp  RenderTargetAttachment.cpp  ShaderCode.cpp  StaticEntity.cpp  StaticInitializer.cpp  Texture.cpp  Texture2D.cpp  TextureView.cpp  Window.cpp
Engine/Core/Utility/: Hasher.hpp
Engine/Engine/: AssetRegistry.hpp  Backend.hpp  CMakeLists.txt  Engine.hpp  ExecutionQueue.hpp  Flint.hpp  GraphicsEngine.hpp  Scene.hpp  SceneView.hpp  StaticStorage.hpp
Engine/Engine/Camera/: Camera.hpp  MonoCamera.hpp
Engine/Engine/Errors/: InvalidBackend.hpp
Engine/Engine/Source/: Engine.cpp  (+3 more)
Engine/Foliage/: CMakeLists.txt  FoliageEngine.hpp  FoliageScene.hpp
Engine/VulkanBackend/: CMakeLists.txt  Exporter.hpp  VulkanBackend.hpp  VulkanBackendHandler.hpp  VulkanBuffer.hpp  VulkanColorAttachment.hpp  VulkanCommandBuffers.hpp  VulkanDepthAttachment.hpp  VulkanDescriptorSetManager.hpp  VulkanDevice.hpp  VulkanDispatcher.hpp  VulkanEngine.hpp  VulkanGeometryStore.hpp  VulkanGraphicsPipeline.hpp  VulkanImage.hpp  VulkanInstance.hpp  VulkanMacros.hpp  VulkanPipeline.hpp  VulkanRasterizer.hpp  VulkanRasterizingDrawEntry.hpp  VulkanRasterizingPipeline.hpp  VulkanRasterizingProgram.hpp  VulkanRayTracer.hpp  VulkanRayTracingPipeline.hpp  VulkanRenderTargetAttachment.hpp  VulkanStaticModel.hpp  VulkanStorageAttachment.hpp  VulkanTexture2D.hpp  VulkanTexture2DView.hpp  VulkanTextureSampler.hpp  VulkanTextureView.hpp  VulkanVertexStorage.hpp  VulkanWindow.hpp
Runtime/Core/: BinaryMap.hpp  BinarySemaphore.hpp  CMakeLists.txt  CountingSemaphore.hpp  DataType.hpp  Error.hpp  FObject.hpp  Hasher.hpp  Macros.hpp  Profiler.hpp  SparseArray.hpp  WorkGroup.hpp  Worker.hpp
Runtime/Engine/: CMakeLists.txt  ClientInterface.hpp  Components.hpp  Controller.hpp  Engine.hpp  PluginManager.hpp
Runtime/Graphics/: CMakeLists.txt  GraphicsCommands.hpp  GraphicsDevice.hpp  GraphicsEngine.hpp  GraphicsInstance.hpp  GraphicsReactor.hpp
Runtime/VulkanBackend/: CMakeLists.txt  VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanCommandBufferAllocator.hpp  VulkanCommandSynchronizationPrimitive.hpp  VulkanComputePipeline.hpp  VulkanDevice.hpp  VulkanDeviceSynchronizationPrimitive.hpp  VulkanDisplay.hpp  VulkanGeometryStore.hpp  VulkanGraphicsPipeline.hpp  VulkanHostSynchronizationPrimitive.hpp  VulkanImage.hpp  VulkanImageSampler.hpp  VulkanImageView.hpp  VulkanInstance.hpp  VulkanMacros.hpp  VulkanOffScreenRenderTarget.hpp  VulkanOneTimeCommandBuffer.hpp  VulkanQuery.hpp  VulkanQueue.hpp  VulkanRenderTarget.hpp  VulkanRenderTargetAttachmentInterface.hpp  VulkanResourcePackage.hpp  VulkanResourcePackager.hpp  VulkanScreenBoundRenderTarget.hpp  VulkanShader.hpp  VulkanSwapChain.hpp  VulkanUtilities.hpp
Sandbox/: CMakeLists.txt  Main.cpp
Sandbox/Firefly/: FireflyScene.hpp  TerrainBuilder.cpp
Sandbox/Tools/: TerrainBuilder.hpp
Source/Backend/: Buffer.cpp  CMakeLists.txt  CommandBuffers.cpp  Device.cpp  DeviceBoundObject.cpp  DrawEntry.cpp  Graphical.cpp  MeshBindingTable.cpp  PipelineCacheHandler.cpp  RasterizingPipeline.cpp  RenderTargetAttachment.cpp  ShaderCode.cpp  StaticInitializer.cpp  Texture.cpp  Texture2D.cpp  TextureView.cpp  Window.cpp
Source/Core/: CMakeLists.txt  Core.lua  FObject.hpp  Worker.hpp
Source/Engine/: CMakeLists.txt  ClientInterface.hpp  Engine.lua  ExecutionQueue.cpp  Flint.cpp  PluginManager.hpp
Source/Graphics/: CMakeLists.txt  GraphicsEngine.hpp  GraphicsInstance.hpp
Source/GraphicsCore/: CMakeLists.txt  CommandSynchronizationPrimitive.hpp  GeometryStore.hpp  Shader.hpp
Source/VulkanBackend/: CMakeLists.txt  VulkanBackend.cpp  VulkanBackend.h  VulkanBackend.lua  VulkanBuffer.cpp  VulkanBuffer.h  VulkanColorAttachment.cpp  VulkanCommandBuffer.h  VulkanCommandBufferList.h  VulkanCommandBufferManager.h  VulkanCommandBuffers.cpp  VulkanCommandSynchronizationPrimitive.hpp  VulkanComputePipeline.hpp  VulkanDepthAttachment.cpp  VulkanDescriptorSetManager.cpp  VulkanDevice.cpp  VulkanDevice.h  VulkanDeviceSynchronizationPrimitive.hpp  VulkanDisplay.cpp  VulkanDisplay.h  VulkanExporter.h  VulkanImage.cpp  VulkanImage.h  VulkanImageSampler.hpp  VulkanInstance.cpp  VulkanInstance.h  VulkanMacros.h  VulkanOneTimeCommandBuffer.cpp  VulkanQueue.cpp  VulkanQueue.h  VulkanRasterizer.cpp  VulkanRasterizingDrawEntry.cpp  VulkanRasterizingPipeline.cpp  VulkanRasterizingProgram.cpp  VulkanRayTracer.cpp  VulkanRayTracingPipeline.cpp  VulkanRenderTarget.cpp  VulkanRenderTarget.h  VulkanRenderTarget.hpp  VulkanRenderTargetAttachment.cpp  (+12 more)
(+1690 files in other folders)
